--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@google-cloud/storage": "^7.14.0",
     "@heroicons/react": "^2.1.5",
     "@prisma/client": "^5.22.0",
+    "axios": "^1.7.8",
     "chart.js": "^4.4.4",
     "date-fns": "^4.1.0",
     "echarts": "^5.5.1",
