--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,43 @@
-networkx>=3.0
-matplotlib>=3.7.0
-requests>=2.31.0
-openai>=1.3.0
-python-dotenv>=1.0.0
+# FastAPI Backend
 fastapi>=0.104.0
-beautifulsoup4>=4.12.0
+pydantic>=2.5.2
 uvicorn>=0.24.0
+httpx>=0.25.2         # Modern HTTP client, recommended for FastAPI
+
+# Environment & Config
+python-dotenv>=1.0.0
+
+# AI & Language Processing
+openai>=1.3.5
+tiktoken>=0.5.1       # OpenAI token counting
+
+# Web Scraping & Parsing
+beautifulsoup4>=4.12.0
+types-beautifulsoup4>4.12.0
+requests>=2.31.0
+lxml>=4.9.3           # Faster HTML parser for BeautifulSoup
+
+# Graph Processing
+networkx>=3.0
+graphlib-backport>=1.0.3  # Python graph operations
+
+# Data Storage & Queries
+google-cloud-bigquery>=3.11.4
+google-cloud-core>=2.3.3
+
+# Visualization
+matplotlib>=3.7.0
+
+# Development Tools
+black>=23.11.0                    # Code formatting
+isort>=5.12.0                     # Import sorting
+mypy>=1.7.1                       # Type checking
+types-requests>=2.32.0.20241016   # Type hints for requests
+pytest>=7.4.3                     # Testing
+flake8>=7.1.1                     # Style checking
+pylint>=3.1.0                     # Code quality metrics
+yapf>=0.40.2                      # Alternative formatter with more config options
+
+# Performance & Utilities
+tqdm>=4.66.1          # Progress bars for long operations
+cachetools>=5.3.2     # Caching decorators
